--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,19 @@ services:
   - docker
 
 script:
-    - docker build --no-cache -t dashboard .
-    - docker build --no-cache -f appbuilder.Dockerfile -t dashboard-builder
-    - docker run --rm dashboard-builder  
+    - docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder
+    - docker run --rm dashme-builder  
+    - docker build --no-cache -t dashme .
 
-# after_success:
-#   - >-
-#     if [ "$TRAVIS_BRANCH" == "master" ]; then
-#     fi
+after_success:
+   - >-
+     if [ "$TRAVIS_BRANCH" == "master" ]; then
+     docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
+     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder;
+     docker run --rm -v ${PWD}/web/target://usr/src/dashboard/web/target dashme-builder;
+     docker build --no-cache -t ${REGISTRY}/dashme .;
+     docker push ${REGISTRY}/dashme
+     fi
 #   - >-
 #     if [ "$TRAVIS_BRANCH" == "develop" ]; then
 #     fi
