--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ after_success:
      if [ "$TRAVIS_BRANCH" == "master" ]; then
      docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
      docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder;
-     docker run --rm -v ${PWD}/web/target://usr/src/dashboard/web/target dashme-builder;
+     docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
      docker build --no-cache -t ${REGISTRY}/dashme .;
      docker push ${REGISTRY}/dashme
      fi
