correct docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ after_success:
    - >-
      if [ "$TRAVIS_BRANCH" == "master" ]; then
      docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
-     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder;
+     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .;
      docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
      docker build --no-cache -t ${REGISTRY}/dashme .;
      docker push ${REGISTRY}/dashme;
@@ -29,7 +29,7 @@ after_success:
    - >-
      if [ "$TRAVIS_BRANCH" == "develop" ]; then
      docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
-     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder;
+     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .;
      docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
      docker build --no-cache -t ${REGISTRY}/dashme:dev .;
      docker push ${REGISTRY}/dashme:dev;
