modify registry variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,18 +20,18 @@ script:
 after_success:
    - >-
      if [ "$TRAVIS_BRANCH" == "master" ]; then
-     docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
+     docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_DOCKER_REGISTRY;
      docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .;
      docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
-     docker build --no-cache -t ${REGISTRY}/dashme .;
-     docker push ${REGISTRY}/dashme;
+     docker build --no-cache -t ${DOCKER_REGISTRY}/dashme .;
+     docker push ${DOCKER_REGISTRY}/dashme;
      fi
    - >-
      if [ "$TRAVIS_BRANCH" == "develop" ]; then
-     docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
+     docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_DOCKER_REGISTRY;
      docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .;
      docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
-     docker build --no-cache -t ${REGISTRY}/dashme:dev .;
-     docker push ${REGISTRY}/dashme:dev;
+     docker build --no-cache -t ${DOCKER_REGISTRY}/dashme:dev .;
+     docker push ${DOCKER_REGISTRY}/dashme:dev;
      fi
 
