--- a/.travis.yml
+++ b/.travis.yml
@@ -14,23 +14,18 @@ services:
   - docker
 
 script:
-    - docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .
-    - docker run --rm dashme-builder  
+    - docker build --no-cache -t dashme .
 
 after_success:
    - >-
      if [ "$TRAVIS_BRANCH" == "master" ]; then
      docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
-     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .;
-     docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
      docker build --no-cache -t ${DOCKER_REGISTRY}/dashme .;
      docker push ${DOCKER_REGISTRY}/dashme;
      fi
    - >-
      if [ "$TRAVIS_BRANCH" == "develop" ]; then
      docker login -u="$DOCKER_USER" -p="$DOCKER_PWD" $DOCKER_REGISTRY;
-     docker build --no-cache -f appbuilder.Dockerfile -t dashme-builder .;
-     docker run --rm -v ${PWD}/target:/usr/src/dashboard/target/ dashme-builder;
      docker build --no-cache -t ${DOCKER_REGISTRY}/dashme:dev .;
      docker push ${DOCKER_REGISTRY}/dashme:dev;
      fi
